Fixing some CSS alignment issues.

--- a/ui/css/wikipedia.css
+++ b/ui/css/wikipedia.css
@@ -14,7 +14,14 @@ border-bottom: 1px solid #AAA;
 width: auto;
 }
 
-h1, h2, h3, h4, h5, h6, p {
+h1 {
+text-align: left;
+padding-left: 10px;
+margin-left: 10px;
+}
+
+h2, h3, h4, h5, h6, p 
+{
 text-align: left;
 padding-left: 10px;
 margin-left: 10px;
